--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,8 @@
     "gridfs-stream": "^1.1.1",
     "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.1",
-    "moongoose": "^0.0.5",
+    "mongodb": "^5.7.0",
+    "mongoose": "^7.4.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.4",
     "multer-gridfs-storage": "^5.0.2"
@@ -16,8 +17,7 @@
   "name": "server",
   "version": "1.0.0",
   "main": "index.js",
-  "type":"module",
-  "devDependencies": {},
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
