--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,3 @@
-MONGO_URL ="mongodb+srv://mongoDB:mongoDB@cluster0.wczodia.mongodb.net/?retryWrites=true&w=majority"
+MONGO_URL ="mongodb+srv://SocialMedia:SocialMedia@cluster1.eelgybg.mongodb.net/?retryWrites=true&w=majority"
 JWT_SECRET ='thisisastring'
 PORT =3001
